# tabs-gen

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.sh
tabs_gen/: __init__.py  cli.py  pipeline.py
tabs_gen/stages/: separation.py  transcription.py
tabs_gen/stages/notation/: bass.py  drums.py  guitar.py  vocals.py
tabs_gen/stages/render/: ascii_tab.py  gp5.py
tabs_gen/utils/: audio.py  compress.py  gdrive.py  midi_utils.py  rhythm.py  youtube.py
tests/: test_notation.py
