[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabs-gen"
version = "0.1.0"
description = "Generate instrument tabs from audio files using ML-based source separation and transcription"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "librosa>=0.11.0",
    "pretty_midi>=0.2.10",
    "mido>=1.3.0",
    "music21>=9.3.0",
    "pydantic>=2.0.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
separation = ["demucs>=4.0.0", "torch>=2.0.0", "torchaudio>=2.0.0"]
transcription = ["basic-pitch>=0.3.0", "crepe>=0.0.14"]
drums = ["ADTLib>=1.0.0", "madmom>=0.16.1"]
output = ["pyguitarpro>=0.10.0"]
all = [
    "tabs-gen[separation]",
    "tabs-gen[transcription]",
    "tabs-gen[drums]",
    "tabs-gen[output]",
]

[project.scripts]
tabs-gen = "tabs_gen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabs_gen*"]
